<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/recycleLinear">

    <TextView
        android:id="@+id/nameTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/textNameTV"
        android:textSize="22sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/addressTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/textAddressTV"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/deleteIV"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_weight="3"
            android:src="@drawable/ic_delete"
            tools:ignore="ContentDescription" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/phoneTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/textPhoneTV"
            android:layout_weight="1"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dateTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:text="@string/textDateTV" />


    </LinearLayout>

</LinearLayout>