<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:layout_marginTop="15dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="8dp">

            <EditText
                android:id="@+id/nameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hintNameET"
                tools:ignore="Autofill,TextFields"/>

            <EditText
                android:id="@+id/phoneET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/hintPhoneET"
                tools:ignore="Autofill,TextFields" />


        </LinearLayout>

    <EditText
        android:id="@+id/addressET"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/textAddressET"
        tools:ignore="Autofill,TextFields"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/saveBTN"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/textSaveBTN"
        android:onClick="saveData"
        android:layout_margin="8dp"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerRV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/list_item"
        android:layout_margin="8dp"/>

</LinearLayout>